--- a/packages/es-dev-server/test/snapshots/polyfills-loader/inline-scripts-resolve-imports.html
+++ b/packages/es-dev-server/test/snapshots/polyfills-loader/inline-scripts-resolve-imports.html
@@ -25,7 +25,7 @@
   </script>
 
   <script type="module">
-    import { message } from './node_modules/my-module/index.js';
+    import { message } from '/node_modules/my-module/index.js';
     import './src/local-module.js';
 
     console.log(`The message is: ${message}`);
